Add location and contact pages

--- a/index.html
+++ b/index.html
@@ -4,10 +4,22 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>Header</header>
-    <section>Triple-Section</section>
-    <section>Section</section>
-    <footer>Footer</footer>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="locations.html">Locations</a></li>
+          <li><a href="contact.html">Contact</a></li>
+            </ul>
+      </nav>
+    </header>
+    <h1>Home</h1>
 
-</body>
+    <p>
+      Move some files around and try to update the navigation to still work!
+    </p>
+    <p>
+      <em>(hint: you'll need to update the CSS link href as well)</em>
+    </p>
+  </body>
 </html>
